@@ -4,6 +4,6 @@ include scripts/veusz scripts/veusz_listen
 recursive-include tests *.py *.sh *.vsz
 recursive-include Documents *.xml *.sh *.png *.txt *.pdf *.html
 recursive-include windows *.png README
-recursive-include examples *.vsz *.eps *.py
+recursive-include examples *.vsz *.eps *.py *.csv
 recursive-include widgets *.dat
 recursive-include helpers *.c README LICENSE_*
